Address Java 9 deprecation, minor refactor